# type-tuple

./: .gitignore  .project  README.md  type-list.cabal  type-tuple.cabal
spec/Type/Tuple/Test/: Basic.hs
src/: Test.hs
src/Type/: List.hs  Tuple.hs
src/Type/List/: Base.hs  Tuple.hs
src/Type/List/Func/: Basic.hs
src/Type/Tuple/: Base.hs  List.hs  Nat.hs  Tuple.hs
src/Type/Tuple/Func/: Basic.hs
test/: Main.hs  Test.hs  Types.hs
test/Type/Tuple/Test/: Base.hs  Basic.hs  Data.hs  Dummy.hs  Expression.hs  Instance.hs  Interpreter.hs  Phantom.hs  Runner.hs  Signature.hs  Test.hs  Text.hs  Types.hs
