name:           type-tuple
version:        0.2
cabal-version:  >= 1.2
build-type:     Simple
author:         Taras Serdyuk
stability:      experimental
synopsis:       Haskell list-like type arithmetic on phantom tuples
homepage:       https://github.com/taras-serdyuk/type-tuple

library
  hs-source-dirs:  src,
                   test
  build-depends:   
                   base >= 4,
                   hint,
                   mtl,
                   QuickCheck,
                   random
  ghc-options:     -Wall
  other-modules:   
                   Type.Tuple.Tuple,
                   Type.Tuple.List,
                   Type.Tuple.Test.Text,
                   Type.Tuple.Test.Types,
                   Type.Tuple.Test.Data,
                   Type.Tuple.Nat,
                   Type.Tuple.Test.Test,
                   Type.Tuple.Test.Expression,
                   Main,
                   Type.Tuple.Test.Runner

